# se-knowledge-partner

./: .gitignore  README.md
.index/: index.json
docs/: Capella_Fabric_Generator_System_Prompt_v1.md  SE_Knowledge_Partner_System_Prompt_v3.md  SE_Knowledge_Partner_System_Prompt_v9.md
kp/: pyproject.toml
kp/artifact_repo/: __main__.py  server.py
kp/artifact_repo/deploy/: DEPLOY.md  kp-artifact-repo.service  nginx_artifact_repo.conf
kp/artifact_repo/store/: filesystem.py  git_store.py  indexed_entries.py
kp/artifact_repo/tools/: crud_tools.py
kp/artifact_repo/types/: base.py  common.py  registry.py
kp/knowledge_repo/: __main__.py  pyproject.toml  server.py
kp/knowledge_repo/deploy/: DEPLOY.md  kp-knowledge-repo.service
kp/knowledge_repo/store/: filesystem.py  git_store.py  indexed_entries.py
kp/knowledge_repo/tools/: crud_tools.py
kp/knowledge_repo/types/: common.py  registry.py
kp/kp_agent/: agent.py  config.py  mcp_client.py  pyproject.toml  routine_engine.py
kp/project_artifact_repo/: __main__.py  pyproject.toml  server.py
kp/project_artifact_repo/deploy/: DEPLOY.md  kp-project-artifact-repo.service  nginx_project_artifact_repo.conf
kp/prompt_library/: __main__.py  pyproject.toml  server.py  store.py
kp/session_manager/: models.py  pyproject.toml  server.py  store.py
kp/viewer/: __main__.py  pyproject.toml  renderers.py  repo_client.py  server.py
kp/viewer/deploy/: DEPLOY.md  kp-viewer.service  nginx_viewer.conf
kp/viewer/templates/: artifact.html  base.html  entry.html  index.html  log.html  logbook.html  not_found.html  package.html  routine.html  setup.html  versions.html  workspace.html
kp/workspace_manager/: __main__.py  pyproject.toml  server.py
kp/workspace_manager/deploy/: DEPLOY.md  kp-workspace-manager.service  nginx_workspace_manager.conf
kp/workspace_manager/store/: filesystem.py  git_store.py  workspace_store.py
kp/workspace_manager/tools/: crud_tools.py  workspace_tools.py
kp/workspace_manager/types/: base.py  common.py  registry.py
notebooks/: migration_log_book_to_indexed.ipynb
