[project]
name = "kp-knowledge-repo"
version = "0.1.0"
description = "Knowledge Repository MCP server — Pydantic-typed, git-backed knowledge store"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "pydantic>=2.0",
    "Jinja2>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["knowledge_repo*"]
