[project]
name = "kp-agent"
version = "0.1.0"
description = "Knowledge Partner agent — LangGraph orchestrator consuming the KP MCP servers"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "openai",
    "mcp[cli]",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["kp_agent*"]
