[project]
name = "kp-project-artifact-repo"
version = "0.1.0"
description = "Project Artifact Repository MCP server — first destination-layer MCP for promoted workspace outputs (Layer 3: FMEA, Pugh, trade studies). Deliberately minimal: reuses workspace_manager's typed-artifact store/types rather than re-implementing it. Must never point at the Capella model repo."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "pydantic>=2.0",
    "kp-workspace-manager",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["project_artifact_repo*"]
