[project]
name = "kp-session-manager"
version = "0.1.0"
description = "Session Manager MCP server — structured interview/checklist/form sessions"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["session_manager*"]
