[project]
name = "kp-viewer"
version = "0.1.0"
description = "Knowledge Artifact Viewer — read-only web UI for KP artifact repositories"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "mistune>=3.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    # artifact_repo (kp-knowledge-repo) must also be installed:
    #   pip install -e kp/artifact_repo
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["viewer*"]
