[project]
name = "kp-workspace-manager"
version = "0.1.0"
description = "Workspace Manager MCP server — typed engineering artifacts (table/yaml/text/html/etc) and per-routine-execution workspace branches"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["workspace_manager*"]
